--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div class="content">
 					<header>
-						<a href="https://guesswhat112.github.io/Cake.github.io/">Did have a cake for you</a>
+						<a href="https://guesswhat112.github.io/Cake.github.io/">Here's a cake</a>
 
 			</section>
 
