--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Ay</h2>
+						<h2>Hello</h2>
 					</header>
-					<p> <strong>Sinh nhật vui vẻ</strong> hi vọng tuổi 18 sẽ đem đến những điều tích cực nhất 
+					<p> Mặc dù chỉ biết m trong khoảng thời gian ngắn nhưng đó là trải nghiệm đáng nhớ nhất của t ở năm cấp 3 này. Mong rằng mọi dự định của m ở cột mốc này sẽ toả sáng rực rỡ đi kèm với sự chín chắn hơn nhé. Hi vọng không quá kì lạ nhưng t thật sự luôn ủng hộ các hoạt động của m á hehe.
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
